debezium-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect
  namespace: cdc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: connect
  template:
    metadata:
      labels:
        app: connect
    spec:
      containers:
        - name: connect
          image: debezium/connect:2.5
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
