debezium-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect
  namespace: cdc
spec:
  type: NodePort
  selector:
    app: connect
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30083
