kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: cdc
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
    - name: controller
      port: 9093
